--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -50,19 +50,47 @@
             box-shadow: none;
         }
     </style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script>
+        const doLogin = () => {
+            var uname =  $("#username").val();
+            var pw =  $("#password").val()
+
+        
+            const dataToSend = {
+                username: uname,
+                password: pw
+            }
+
+            console.log(dataToSend)
+
+            $.ajax({
+                type: "POST",
+                url: "/login",
+                data: JSON.stringify(dataToSend),
+                contentType: 'application/json',
+                success: function (e) {
+                    console.log(e)
+                },
+                error: (err) => {
+                    console.log(err)
+                }
+            });
+        }
+    </script>
 </head>
 <body>
     <div class="login-card">
         <h2 class="login-title">Login</h2>
-        <form action="/login" method="post">
+        <form>
             <div class="form-group">
-                <input type="text" class="form-control" placeholder="Username" required>
+                <input id="username" type="text" class="form-control" placeholder="Username" required>
             </div>
             <div class="form-group">
-                <input type="password" class="form-control" placeholder="Password" required>
+                <input id="password" type="password" class="form-control" placeholder="Password" required>
             </div>
-            <button type="submit" class="btn btn-primary btn-block login-btn">Login</button>
         </form>
+        <button onclick="doLogin()" class="btn btn-primary btn-block login-btn">Login</button>
     </div>
 </body>
 </html>
