feat: success use jwt and guard by role

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -71,6 +71,7 @@
                 contentType: 'application/json',
                 success: function (e) {
                     console.log(e)
+                    window.location.href = "/"
                 },
                 error: (err) => {
                     console.log(err)
