minus create CRUD for role and menu list

--- a/src/main/resources/templates/fragments/mainsidebar.html
+++ b/src/main/resources/templates/fragments/mainsidebar.html
@@ -3,7 +3,7 @@
   <!-- Main Sidebar Container -->
   <aside class="main-sidebar sidebar-dark-primary elevation-5">
     <!-- Brand Logo -->
-    <a th:href="@{./dashboard}" class="brand-link">
+    <a href="/" class="brand-link">
       <span class="brand-text font-weight-light"><center><b>TFAnE <span id="currentCompany">DDR</span></b></center></span>
     </a>
 
@@ -12,7 +12,7 @@
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="info">
-          <a href="#" class="d-block"><span>Dashboard</span></a>
+          <a href="/" class="d-block"><span>Dashboard</span></a>
         </div>
       </div>
 
@@ -60,6 +60,8 @@
             </a>
             <ul class="nav nav-treeview">
             		<li class="nav-item"><a href="./beneficiarylist" class="nav-link"><i class="far fa-circle nav-icon"></i><p>User Access</p></a></li>
+                <li class="nav-item"><a href="./beneficiarylist" class="nav-link"><i class="far fa-circle nav-icon"></i><p>User Role</p></a></li>
+                <li class="nav-item"><a href="./beneficiarylist" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Menu List</p></a></li>
             </ul>
           </li>
           
