sukses crud menu list

--- a/src/main/resources/templates/fragments/mainsidebar.html
+++ b/src/main/resources/templates/fragments/mainsidebar.html
@@ -61,7 +61,7 @@
             <ul class="nav nav-treeview">
             		<li class="nav-item"><a href="./beneficiarylist" class="nav-link"><i class="far fa-circle nav-icon"></i><p>User Access</p></a></li>
                 <li class="nav-item"><a href="./beneficiarylist" class="nav-link"><i class="far fa-circle nav-icon"></i><p>User Role</p></a></li>
-                <li class="nav-item"><a href="./beneficiarylist" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Menu List</p></a></li>
+                <li class="nav-item"><a href="/menu-list/" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Menu List</p></a></li>
             </ul>
           </li>
           
