--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -20,7 +20,7 @@
     <!-- Right navbar links -->
 	<ul class="navbar-nav ml-auto">
       	<li class="nav-item d-none d-sm-inline-block">
-			<a th:href="@{./logout}" class="nav-link">Logout</a>
+			<a href="/logout" class="nav-link">Logout</a>
 		</li>
     </ul>
   </nav>
