--- a/src/main/resources/templates/fragments/mainsidebar.html
+++ b/src/main/resources/templates/fragments/mainsidebar.html
@@ -59,8 +59,7 @@
               </p>
             </a>
             <ul class="nav nav-treeview">
-            		<li class="nav-item"><a href="./beneficiarylist" class="nav-link"><i class="far fa-circle nav-icon"></i><p>User Access</p></a></li>
-                <li class="nav-item"><a href="./beneficiarylist" class="nav-link"><i class="far fa-circle nav-icon"></i><p>User Role</p></a></li>
+            		<li class="nav-item"><a href="/user-access/" class="nav-link"><i class="far fa-circle nav-icon"></i><p>User Access</p></a></li>
                 <li class="nav-item"><a href="/menu-list/" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Menu List</p></a></li>
             </ul>
           </li>
