--- a/src/main/resources/templates/circulation_document_in/edit.html
+++ b/src/main/resources/templates/circulation_document_in/edit.html
@@ -11,11 +11,21 @@
 
         $(document).ready(function(){
             var selectedValues = {};
+            var docIds = $('#selectedOptionsContainer > div').map(function() {
+                return $(this).text().trim();
+            }).get();
+
+            docIds.forEach((id) => {
+                selectedValues[id] = true;
+            })
+
+            
             $('#selectedCompanyTest').change(function(){
                 $('#selectedCompanyTest option:selected').each(function(){
                     var selectedText = $(this).text();
                     var selectedValue = $(this).val();
                     var textId = $(this).attr('id')
+                    if(textId == undefined) return;
                     if (!selectedValues[selectedText]  && selectedValue != "") {
                         selectedValues[selectedText] = true;
                         $('#selectedOptionsContainer').append('<div class="badge badge-info mr-2" id="' +textId+'">' + selectedText + '</div>');
@@ -28,11 +38,14 @@
                 $('#selectedCompany option:selected').each(function(){
                     var selectedValue = $(this).val();
                     var selectedText = $(this).text();
+                    var docSplit = window.location.pathname.split("/");
+                    var circlId = docSplit[2]
+                    console.log(circlId)
                     
 
                     $.ajax({
                         type: "get",
-                        url: "docs/" + selectedValue,
+                        url: "edit/docs/" + selectedValue + '/' + circlId,
                         success: function (res) {
                             var dropdown = document.getElementById("selectedCompanyTest");
 
@@ -50,8 +63,10 @@
                                 newOption.id = option.documentId;
                                 dropdown.appendChild(newOption);
                             })
-                            $('#selectedOptionsContainer').html('')
                             selectedValues = {}
+
+                            $('#selectedOptionsContainer').html('')
+
                         },
                         error: (err) => {
                             console.log(err)
@@ -69,7 +84,7 @@
             });
         });
 
-        function saveCirculationDocument() {
+        function updateCirculationDocument() {
             var temp =  $('#selectedOptionsContainer').children()
             
             const selectedDocId = []
@@ -91,11 +106,11 @@
 
             $.ajax({
                 type: "post",
-                url: "add",
+                url: "update",
                 data: JSON.stringify(dataToSend),
                 contentType: 'application/json',
                 success: function () {
-                    window.location.href = "/circulation-document/";
+                    window.location.href = "/circulation-document-in/";
                 },
                 error: (err) => {
                     console.log(err)
@@ -109,7 +124,7 @@
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-sm-6">
-                    <h1 class="m-0 text-dark">Circulation Document</h1>
+                    <h1 class="m-0 text-dark">Circulation Document In</h1>
                 </div>
                 <!-- /.col -->
                 <div class="col-sm-6">
@@ -132,7 +147,7 @@
                     <div class="card p-5">
                         <div class="pb-3">
                             <h2 class="card-title fs-2 font-weight-bold" >
-                                Circulation Document Add
+                                Circulation Document In Add
                             </h2>
                         </div>
                         <div class="">
@@ -143,34 +158,38 @@
                                             <div class="d-flex flex-column flex">
                                                 <div class="">
                                                     <label for="companyId">Circulation Document ID</label> 
-                                                    <input type="text" class="form-control myInput w-25" id="CRid" readonly="readonly" th:value="${counter}"/>
+                                                    <input type="text" class="form-control myInput w-25" id="CRid" readonly="readonly" th:value="${data.circulationDocId}"/>
                                                 </div>
                                                 <div class="d-flex flex-column">
                                                     <label>Company To</label> 
-                                                    <select id="selectedCompany" style="width: 50%;">
-                                                        <option style="color: gray; cursor: default; pointer-events: none;" value="">Select an Company</option>
-                                                        <option th:each="company : ${companies}" th:value="${company.companyId}" th:text="${company.companyName}"></option>
+                                                    <select id="selectedCompany" th:field="${data.company.companyId}" class="w-25">
+                                                        <option th:each="company : ${companies}" th:selected="${data.company.companyId eq company.companyId}" th:value="${company.companyId}" th:text="${company.companyName}"></option>
                                                     </select>
                                                 </div>
                                                 <div class="">
                                                     <label for="cp">Received By</label> 
-                                                    <input type="text" class="form-control w-50" placeholder="Insert Ref Description" id="receivedBy"/>
+                                                    <input th:value="${data.receivedBy}" type="text" class="form-control w-50" placeholder="Insert Ref Description" id="receivedBy"/>
                                                 </div>
                                                 <div class="">
                                                     <label for="cp">Ref Description</label> 
-                                                    <textarea type="text" class="form-control w-50" placeholder="Insert Ref Description" id="des"></textarea>
+                                                    <textarea th:text="${data.refDescription}" type="text" class="form-control w-50" placeholder="Insert Ref Description" id="des"></textarea>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="w-50">
                                             <div class="container mt-4">
                                                 <h3>Select Options</h3>
-                                                <select id="selectedCompanyTest" class="w-50">
+                                                <select id="selectedCompanyTest" class="w-25">
+                                                    <option style='color: gray; cursor: default; pointer-events: none;'>Select an Document</option>
+                                                    <option th:each="doc:${docs}" th:id="${doc.documentId}" th:value="${doc.invoiceRef}" th:text="${doc.documentId} + ' -- ' + ${doc.invoiceRef}"></option>
+                                                    <option th:each="doc:${allDocs}" th:id="${doc.documentId}" th:value="${doc.invoiceRef}" th:text="${doc.documentId} + ' -- ' + ${doc.invoiceRef}"></option>
                                                 </select>
                                         
                                                 <div class="mt-3">
                                                     <h4>Selected Options</h4>
-                                                    <div id="selectedOptionsContainer"></div>
+                                                    <div id="selectedOptionsContainer">
+                                                        <div th:each="doc:${docs}" th:id="${doc.documentId}" th:text="${doc.documentId} + ' -- ' + ${doc.invoiceRef}" class="badge badge-info mr-2"></div>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -181,9 +200,9 @@
                                 <div class="">
                                     <div class="box-footer d-flex flex-row-reverse">
                                       <div class="pl-3">
-                                        <button onclick="saveCirculationDocument()" class="btn bg-black pl-2">Save</button>
+                                        <button onclick="updateCirculationDocument()" class="btn bg-black pl-2">Save</button>
                                       </div>
-                                        <a href="/circulation-document/" type="button"
+                                        <a href="/circulation-document-in/" type="button"
                                             class="btn bg-gray">Cancel</a>	
                                     </div>
                                 </div>
