--- a/src/main/resources/templates/circulation_document_in/list.html
+++ b/src/main/resources/templates/circulation_document_in/list.html
@@ -21,7 +21,7 @@
 
                 console.log(temp);  
                 if(temp.length == 1){
-                    window.location.href = "/circulation-document/" + temp[0]
+                    window.location.href = "/circulation-document-in/" + temp[0]
                 }
                 else {
                     alert("Hanya dapat mengedit 1 buah circulation document")
@@ -66,14 +66,14 @@
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-sm-6">
-                    <h1 class="m-0 text-dark">Circulation Document</h1>
+                    <h1 class="m-0 text-dark">Circulation Document In</h1>
                 </div>
                 <!-- /.col -->
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
                         <button class="btn btn-default m-2" type="button" onclick="editCirclDocument()">Edit</button>
                         <button class="btn btn-danger m-2" type="button" onclick="deleteSelected()">Delete Selected</button>
-                        <a href="/circulation-document/add" class="nav-link"><p>Create</p></a>
+                        <a href="/circulation-document-in/add" class="nav-link"><p>Create</p></a>
                     </ol>
                 </div>
                 <!-- /.col -->
