--- a/src/main/resources/templates/circulation_document_out/list.html
+++ b/src/main/resources/templates/circulation_document_out/list.html
@@ -9,38 +9,8 @@
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script>
 
-            function downloadDocument(filePath){
 
-                const dataToSend = {
-                    filePath: filePath
-                };
-
-                $.ajax({
-                    url: 'download',
-                    type: 'POST',
-                    data: JSON.stringify(dataToSend),
-                    xhrFields: {
-                        responseType: 'blob'
-                    },
-                    contentType: 'application/json',
-                    success: (data) => {
-                        const url = window.URL.createObjectURL(data);
-                        const a = document.createElement('a');
-                        a.href = url;
-                        a.download = filePath; // Set the desired file name
-                        document.body.appendChild(a);
-                        a.click();
-                        document.body.removeChild(a);
-                        window.URL.revokeObjectURL(url);
-                    },
-                    
-                    error: (err) => {
-                   
-                    }
-                })
-            }
-
-            function editDocument(){
+            function editCirclDocument(){
                 const temp = []
                 var checkboxes = document.querySelectorAll('input[id^=deleteCheckbox]');
                 checkboxes.forEach(function(checkbox) {
@@ -51,14 +21,17 @@
 
                 console.log(temp);  
                 if(temp.length == 1){
-                    window.location.href =  temp[0];
+                    window.location.href = "/circulation-document-out/" + temp[0]
                 }
                 else {
-                    alert("Hanya dapat mengedit 1 buah document")
+                    alert("Hanya dapat mengedit 1 buah circulation document")
                 }
             }
 
+
             function deleteSelected() {
+
+            
                 const temp = []
                 var checkboxes = document.querySelectorAll('input[id^=deleteCheckbox]');
                 checkboxes.forEach(function(checkbox) {
@@ -67,8 +40,9 @@
                     }
                 });
                 const dataToSend = {
-                    documentValue: temp
+                    circulationsValue: temp
                 }
+                console.log(dataToSend)
                 $.ajax({
                     url: 'delete',
                     type: 'POST',
@@ -79,7 +53,7 @@
                         checkboxes.forEach(function(checkbox) {
                             checkbox.checked = false;
                         });
-                        location.reload()
+                        window.location.reload()
                     },
                     error: (err) => {
                         console.log(err)
@@ -92,14 +66,14 @@
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-sm-6">
-                    <h1 class="m-0 text-dark">Document IN</h1>
+                    <h1 class="m-0 text-dark">Circulation Document Out</h1>
                 </div>
                 <!-- /.col -->
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
-                        <button class="btn btn-default m-2" type="button" onclick="editDocument()">Edit</button>
+                        <button class="btn btn-default m-2" type="button" onclick="editCirclDocument()">Edit</button>
                         <button class="btn btn-danger m-2" type="button" onclick="deleteSelected()">Delete Selected</button>
-                        <a href="/document-in/add" class="nav-link"><p>Create</p></a>
+                        <a href="/circulation-document-out/add" class="nav-link"><p>Create</p></a>
                     </ol>
                 </div>
                 <!-- /.col -->
@@ -117,30 +91,33 @@
                             <thead class="thead-dark">
                                 <tr>
                                     <th>Select</th>
-                                    <th>Document ID</th>
+                                    <th>ID</th>
                                     <th>Company To</th>
+                                    <th>Received by</th>
                                     <th>Date</th>
-                                    <th>Vendor To</th>
-                                    <th>Invoice Ref</th>
-                                    <th>Created By</th>
+                                    <th>Created by</th>
+                                    <th>Ref Description</th>
                                     <th>Status</th>
-                                    <th>Download</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <!-- Loop melalui list of companies -->
-                                <tr th:each="doc, index : ${document}">
+                                <tr th:each="docs, index : ${circulation_document}">
                                     <td>
-                                        <input type="checkbox" th:id="'deleteCheckbox' + ${index.index}" th:name="'deleteCheckbox' + ${index.index}" th:value="${doc.documentId}">
+                                        <input 
+                                            th:disabled="${docs.isClosed ? 'disabled' : null}"
+                                            type="checkbox" 
+                                            th:id="'deleteCheckbox' + ${index.index}" 
+                                            th:name="'deleteCheckbox' + ${index.index}" 
+                                            th:value="${docs.circulationDocId}">
                                     </td>
-                                    <td th:text="${doc.documentId}"></td>
-                                    <td th:text="${doc.company.companyName}"></td>
-                                    <td th:text="${#dates.format(doc.createdAt, 'dd/MM/yy')}"></td>
-                                    <td th:text="${doc.vendor.vendorName}"></td>
-                                    <td th:text="${doc.invoiceRef}"></td>
-                                    <td th:text="${doc.createdBy}"></td>
-                                    <td th:text="${doc.status}"></td>
-                                    <td><button th:data-name="${doc.documentPath}" th:onclick="downloadDocument(this.getAttribute('data-name'))" type="button">Doc</button></td>
+                                    <td th:text="${docs.circulationDocId}"></td>
+                                    <td th:text="${docs.company.companyName}"></td>
+                                    <td th:text="${docs.receivedBy}"></td>
+                                    <td th:text="${#dates.format(docs.createdAt, 'dd/MM/yy')}"></td>
+                                    <td th:text="${docs.createdBy}"></td>
+                                    <td th:text="${docs.refDescription}"></td>
+                                    <td th:text="${docs.isClosed} ? 'Received' : 'Submitted' "></td>
                                 </tr>
                             </tbody>
                         </table>
