--- a/src/main/resources/templates/document/in.html
+++ b/src/main/resources/templates/document/in.html
@@ -140,7 +140,7 @@
                                     <td th:text="${doc.invoiceRef}"></td>
                                     <td th:text="${doc.createdBy}"></td>
                                     <td th:text="${doc.status}"></td>
-                                    <td><button th:data-name="${doc.documentPath}" th:onclick="downloadDocument(this.getAttribute('data-name'))" type="button">Doc</button></td>
+                                    <td><button th:data-name="${doc.documentPath}" th:onclick="downloadDocument(this.getAttribute('data-name'))" type="button">Docs</button></td>
                                 </tr>
                             </tbody>
                         </table>
