--- a/src/main/resources/templates/fragments/mainsidebar.html
+++ b/src/main/resources/templates/fragments/mainsidebar.html
@@ -30,8 +30,8 @@
               </p>
             </a>
             <ul class="nav nav-treeview">
-            		<li class="nav-item"><a href="/vendor/" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Master Vendor</p></a></li>
-                <li class="nav-item"><a href="/company/" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Master Company</p></a></li>
+            		<li th:if="${session.role.contains('Master Vendor')}" class="nav-item"><a href="/vendor/" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Master Vendor</p></a></li>
+                <li th:if="${session.role.contains('Master Company')}" class="nav-item"><a href="/company/" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Master Company</p></a></li>
             </ul>
           </li>
 
@@ -43,12 +43,12 @@
               </p>
             </a>
             <ul class="nav nav-treeview">
-            		<li class="nav-item"><a href="/document-in/" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Document - IN</p></a></li>
-                <li class="nav-item"><a href="/document-out/" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Document - OUT</p></a></li>
+            		<li th:if="${#strings.toLowerCase(session.role) .contains('document - in')}" class="nav-item"><a href="/document-in/" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Document - IN</p></a></li>
+                <li th:if="${session.role.contains('Document - OUT')}" class="nav-item"><a href="/document-out/" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Document - OUT</p></a></li>
                 <li class="nav-item"><a href="./beneficiarylist" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Document - TRACK</p></a></li>
-                <li class="nav-item"><a href="/circulation-document-in/" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Circulation Document In</p></a></li>
-                <li class="nav-item"><a href="/circulation-document-out/" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Circulation Document Out</p></a></li>
-                <li class="nav-item"><a href="/received-document/" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Received Document</p></a></li>
+                <li th:if="${#strings.toLowerCase(session.role) .contains('circulation document in')}" class="nav-item"><a href="/circulation-document-in/" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Circulation Document In</p></a></li>
+                <li th:if="${session.role.contains('Circulation Document Out')}" class="nav-item"><a href="/circulation-document-out/" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Circulation Document Out</p></a></li>
+                <li th:if="${session.role.contains('Received Document')}" class="nav-item"><a href="/received-document/" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Received Document</p></a></li>
             </ul>
           </li>
 
@@ -60,8 +60,8 @@
               </p>
             </a>
             <ul class="nav nav-treeview">
-            		<li class="nav-item"><a href="/user-access/" class="nav-link"><i class="far fa-circle nav-icon"></i><p>User Access</p></a></li>
-                <li class="nav-item"><a href="/menu-list/" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Menu List</p></a></li>
+            		<li th:if="${session.role.contains('User Access')}" class="nav-item"><a href="/user-access/" class="nav-link"><i class="far fa-circle nav-icon"></i><p>User Access</p></a></li>
+                <li th:if="${session.role.contains('Menu List')}" class="nav-item"><a href="/menu-list/" class="nav-link"><i class="far fa-circle nav-icon"></i><p>Menu List</p></a></li>
             </ul>
           </li>
           
