--- a/src/main/resources/templates/circulation_document_out/list.html
+++ b/src/main/resources/templates/circulation_document_out/list.html
@@ -8,7 +8,10 @@
         <!-- Head content - Meta tags, title, CSS references -->
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script>
-
+            
+            function downloadDocument(filePath){
+                window.open("get/"+filePath, '_blank');
+            }
 
             function editCirclDocument(){
                 const temp = []
@@ -98,6 +101,7 @@
                                     <th>Created by</th>
                                     <th>Ref Description</th>
                                     <th>Status</th>
+                                    <th>Download</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -118,6 +122,7 @@
                                     <td th:text="${docs.createdBy}"></td>
                                     <td th:text="${docs.refDescription}"></td>
                                     <td th:text="${docs.isClosed} ? 'Received' : 'Submitted' "></td>
+                                    <td><button th:data-name="${docs.circulationDocId}" th:onclick="downloadDocument(this.getAttribute('data-name'))" type="button">Generate PDF</button></td>
                                 </tr>
                             </tbody>
                         </table>
