--- a/src/main/resources/templates/circulationDocumentPDF.html
+++ b/src/main/resources/templates/circulationDocumentPDF.html
@@ -3,54 +3,86 @@
     xmlns="http://www.w3.org/1999/xhtml" 
 	xmlns:th="http://www.thymeleaf.org" 
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
-	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout">
-<head>
-    <style>
-        h1{
-            color: brown;
-        }
-        .quotation {
-            width: 100%;
-        }
-        .quotation, .quotation th, .quotation td {
-            border: 1px solid black;
-            border-collapse: collapse;
-        }
-        .quotation th {
-            background-color: black;
-            color: white;
-        }
-    </style>
-</head>
-<body>
-<img th:src="${logo}" style="height: 30%; width: 20%;" alt="test"/>
-<table>
-    <tr>
-        <th th:text ="'Circulation Document ID : ' + ${circl.circulationDocId}"></th>
-    </tr>
-    <tr>
-        <td th:text="'Send To :  ' + ${circl.receivedBy}"></td>
-    </tr>
-    <tr>
-        <td th:text="${circl.company.companyName}"></td>
-    </tr>
-</table>
-<br />
-<table class="quotation">
-    <tr>
-        <th>No</th>
-        <th>DocumentId</th>
-        <th>Vendor Name</th>
-        <th>Invoice Ref</th>
-        <th>Ref Description</th>
-    </tr>
-    <tr th:each="item, iterStat: ${docs}">
-        <td th:text="${iterStat.index + 1}"></td>
-        <td th:text="${item.documentId}"></td>
-        <td th:text="${item.vendor.vendorName}"></td>
-        <td th:text="${item.invoiceRef}"></td>
-        <td th:text="${item.description}"></td>
-    </tr>
-</table>
-</body>
+	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
+>
+    <head>
+        <style>
+            h1{
+                color: brown;
+            }
+            .quotation {
+                width: 100%;
+            }
+            .quotation th {
+                background-color: black;
+                color: white;
+            }
+
+            footer {
+                position: fixed;
+                bottom: 0;
+                left: 0;
+                width: 90%;
+                text-align: right;
+            }
+
+            .top-right-content {
+                position: absolute;
+                top: 0px;
+                right: 20px; /* Adjust the right distance as needed */
+            }
+        </style>
+    </head>
+    <body>
+        <img th:src="${logo}" style="height: 70%; width: 50%;" alt="test"/>
+        <div style="margin-top: 10px; margin-bottom: 15px;">
+            <div class="top-right-content">
+                <table class="font-weight: bold;">
+                    <tr>
+                        <td style="font-size: large; font-weight: bold;" th:text="${circl.circulationDocId}"></td>
+                    </tr>
+                    <tr>
+                        <td>Circulation Document</td>
+                    </tr>
+                    <tr>
+                        <td style="font-size: large; font-weight: bold;" th:text="${#dates.format(circl.createdAt, 'dd/MM/yy')}"></td>
+                    </tr>
+                </table>
+            </div>
+            <table style="margin-top: 10px; margin-bottom: 15px;">
+                <tr>
+                    <td th:text="'Send To :  ' + ${circl.receivedBy}"></td>
+                </tr>
+                <tr>
+                    <td style="font-size: large; font-weight: bold;" th:text="${circl.company.companyName}"></td>
+                </tr>
+            </table>
+        </div>
+        
+        <br />
+        <table class="quotation">
+            <tr>
+                <th>No</th>
+                <th>DocumentId</th>
+                <th>Vendor Name</th>
+                <th>Invoice Ref</th>
+                <th>Ref Description</th>
+            </tr>
+            <tr th:each="item, iterStat: ${docs}">
+                <td th:text="${iterStat.index + 1}"></td>
+                <td th:text="${item.documentId}"></td>
+                <td th:text="${item.vendor.vendorName}"></td>
+                <td th:text="${item.invoiceRef}"></td>
+                <td th:text="${item.description}"></td>
+            </tr>
+        </table>
+    </body>
+    <footer>
+        <div>
+            <div>
+                <p>Created By</p>
+                <p th:text="${circl.createdBy}"></p>
+            </div>
+        </div>
+    </footer>
 </html>
